# mandate-spec

./: .gitignore  .pr_agent.toml  Cargo.toml  LICENSE  README.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/security/: audit-status.json
.github/workflows/: ci.yml
crates/mandate-core/: Cargo.toml
crates/mandate-core/src/: attest.rs  canonical.rs  error.rs  eth.rs  lib.rs  sign.rs  types.rs  verify.rs
crates/mandate-core/tests/: example_roundtrip.rs  sign_verify_eip191.rs
docs/specs/: 2026-05-03-mandate-v0.md
docs/wiki/: README.md
examples/: coffee.mandate.json
schema/: mandate-v0.schema.json
