[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bong-water-water-bong/mandate-spec"
authors = ["1bit.systems"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "1"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha3 = "0.10"
hex = "0.4"
