[package]
name = "mandate-core"
description = "Core types, canonical serialization, and verification for the Mandate v0 wire format."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
